Acento adicionado no curso de integração contínua

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <ul>
-        <li>Primeiro curso 1</li>
-        <li>Segundo curso 2</li>
-        <li>Terceiro curso 3</li>
-        <li>Quarto curso 4</li>
-        <li>Quinto curso 5</li>
+        <li>Vagrant</li>
+        <li>Doker</li>
+        <li>Amsible</li>
+        <li>Integração Contínua</li>
+        <li>Entrega Contínua</li>
     </ul>
 </body>
 </html>
