--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Curso de
+            Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Amsible</li>
         <li>Integração Contínua</li>
