--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <li>Curso de
             Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Amsible</li>
+        <li>Amsible Curso de
+            Ansible: Sua infraestrutura como código</li>
         <li>Integração Contínua</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes</li>
