Alterando o nomedo curso de Amsible

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <li>Curso de
             Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Amsible Curso de
-            Ansible: Sua infraestrutura como código</li>
+        <li>Ansible: Sua infraestrutura como código</li>
         <li>Integração Contínua</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Kubernetes</li>
+        <li>Curso de
+            Kubernetes: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
